--- a/EstilosLogin/css/EstilosPin.css
+++ b/EstilosLogin/css/EstilosPin.css
@@ -5,10 +5,16 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: #e4fffa;
 }
 
+main{
+    background-color: #FFFFFF;
+}
+
+/* crear estructura o tarjeta del formulario */
 form{
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     padding: 50px 35px;
     border-radius: 25px;
     display: flex;
@@ -39,16 +45,16 @@ input{
     color: #0D0D0D;
     padding: 20px 15px 20px 60px;
     width: 100%;
-    border-radius: 25px;
+    border-radius: 25px; /*redondear botones */
     border: 0;
-    box-shadow: 0 0 20px rgba(192, 203, 251, 0.7);
+    box-shadow: 0 0 15px rgba(168, 184, 255, 0.6);
     outline: none;
     font-size: 16px;
 }
 
 input::placeholder {
     font-size: 16px;
-    color: #BBBBE2;
+    color: #0D0D0D;
 }
 
 .input-icon {
@@ -60,6 +66,7 @@ input::placeholder {
     transform: translateY(-55%);
 }
 
+/* boton morado y azul */
 .btn{
     padding: 20px;
     background: linear-gradient(
