--- a/EstilosLogin/css/estilos.css
+++ b/EstilosLogin/css/estilos.css
@@ -203,11 +203,14 @@ main{
 	gap: 20px;
 }
 
+.formulario__grupo {
+    margin-bottom: 10px; /* Espacio entre los grupos de campos */
+}
+
 .formulario__label {
-	display: block;
-	font-weight: 700;
-	padding: 10px;
-	cursor: pointer;
+    display: block;
+    font-weight: 700;
+    margin-bottom: -20px; /* Espacio entre el label y el input */
 }
 
 .formulario__grupo-input {
@@ -225,15 +228,6 @@ main{
 	transition: .3s ease all;
 }
 
-.formulario__grupo {
-    margin-bottom: 10px; /* Espacio entre los grupos de campos */
-}
-
-.formulario__label {
-    display: block;
-    font-weight: 700;
-    margin-bottom: -20px; /* Espacio entre el label y el input */
-}
 
 .formulario__input:focus {
 	border: 3px solid #0075FF;
@@ -241,7 +235,17 @@ main{
 	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
 }
 
+.mensaje_error {
+	font-size: 12px;
+	margin-bottom: 0;
+	/* display: none; */
+}
 .formulario__input-error {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+.formulario__input-error2 {
 	font-size: 12px;
 	margin-bottom: 0;
 	display: none;
@@ -251,22 +255,31 @@ main{
 	display: block;
 }
 
-.formulario__validacion-estado {
+.formulario__input-error-activo2 {
+	display: block;
+}
+
+/* .formulario__validacion-estado {
 	position: absolute;
 	right: 10px;
 	bottom: 15px;
 	z-index: 100;
 	font-size: 16px;
 	opacity: 0;
-}
+} */
 
 .ver_password {
 	position: absolute;
-	right: 40px;
+	right: 10px;
 	bottom: 15px;
 	z-index: 100;
-	/* font-size: 16px; */
+	font-size: 16px;
 	opacity: 1;
+}
+
+.formulario__mensaje-error {
+    color: #bb2929;
+    margin-top: 10px;
 }
 
 .formulario__checkbox {
@@ -319,6 +332,10 @@ main{
 	color: #1ed12d;
 	opacity: 1;	
 }
+.formulario__grupo-correcto2 .formulario__validacion-estado {
+	color: #1ed12d;
+	opacity: 1;	
+}
 
 .formulario__grupo-incorrecto .formulario__label {
 	color: #bb2929;
@@ -330,6 +347,18 @@ main{
 }
 
 .formulario__grupo-incorrecto .formulario__input {
+	border: 3px solid #bb2929;
+}
+.formulario__grupo-incorrecto2 .formulario__label {
+	color: #bb2929;
+}
+
+.formulario__grupo-incorrecto2 .formulario__validacion-estado {
+	color: #bb2929;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto2 .formulario__input {
 	border: 3px solid #bb2929;
 }
 
@@ -354,4 +383,8 @@ main{
 .fecha-nacimiento-input {
     margin-top: 0px; /* Ajusta el margen superior del input */
     /* Otros estilos si es necesario */
+}
+
+.mayuscula {
+    text-transform: uppercase;
 }
