--- a/EstilosLogin/css/EstilosValidaciones.css
+++ b/EstilosLogin/css/EstilosValidaciones.css
@@ -165,7 +165,7 @@
 	border: 3px solid #bb2929;
 }
 
-/*Logo del Login */
+/* del Login */
 .logo {
     display: block;
     margin: -40px auto 10px auto; 
