--- a/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
+++ b/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
@@ -17,8 +17,7 @@
 }
 
 .row d-flex {
-   margin: 0;
-   /* Elimina el margen del contenedor */
+   margin: 0; /* Elimina el margen del contenedor */
 }
 
 .formulario {
@@ -35,7 +34,7 @@
 .formulario__label {
    display: block;
    font-weight: 700;
-   margin-bottom: 2px;
+   margin-bottom: 0px;
    /* Espacio entre el label y el input */
 }
 
@@ -43,17 +42,17 @@
    position: relative;
 }
 
-.formulario__input {
+/* .formulario__input {
    width: 100%;
    background: #fff;
-   /* border: 3px solid transparent; */
+   /* border: 3px solid transparent; /
    border-radius: 3px;
    height: 45px;
    line-height: 45px;
    padding: 0 40px 0 10px;
    transition: .3s ease all;
-   /* border-radius: var(--bs-border-radius); */
-   /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+   /* border-radius: var(--bs-border-radius); /
+   /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; /
    display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
@@ -69,7 +68,7 @@
    border: var(--bs-border-width) solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+} */
 
 .formulario__input:focus {
    border: 3px solid #0075FF;
@@ -208,7 +207,7 @@
 
 .combobox {
    height: 30px;
-   width: 330px;
+   width: 100%;
 
 }
 
@@ -252,7 +251,7 @@
    /* border: 1px solid #000; */
    border-radius: 5px;
    padding: 15px;
-   margin-bottom: 10px;
+   /* margin-bottom: 10px; */
 }
 
 /* --------------NUEVO---------------------- */
@@ -265,7 +264,7 @@
    margin: -20px auto;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
    /* Agrega una sombra suave */
-   margin-bottom: 20px;
+   /* margin-bottom: 20px; */
    border-radius: 10px !important;
    /* Agrega un borde redondeado de 10px */
 }
@@ -291,7 +290,7 @@
 /* Estilos para los labels */
 .labelEvaluacion {
    font-weight: bold;
-   margin-bottom: -15px;
+   /* margin-bottom: -15px; */
    color: #007bff;
    /* Color azul representativo */
 }
@@ -300,7 +299,7 @@
 .formulario__input {
    width: calc(100% - 12px);
    padding: 8px;
-   margin-top: 5px;
+   /* margin-top: 5px; */
    border: 1px solid #ced4da;
    border-radius: 4px;
 }
@@ -308,17 +307,13 @@
 .columnas {
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between;
-   /* Espacio entre columnas */
-   margin-bottom: 10px;
-   /* Espacio entre filas */
+   justify-content: space-between; /* Espacio entre columnas */
+   margin-bottom: 5px; /* Espacio entre filas */
 }
 
 .columna {
-   width: calc(50% - 10px);
-   /* Ancho del 50% para cada columna con margen */
-   margin-bottom: 10px;
-   /* Espacio entre elementos */
+   width: calc(50% - 10px); /* Ancho del 50% para cada columna con margen */
+   margin-bottom: 5px; /* Espacio entre elementos */
 }
 
 .col-tarjeta-paciente {
@@ -330,4 +325,18 @@
    margin-top: -3px;
    /* Reduce el margen superior del input */
    margin-bottom: 12px !important;
+}
+
+.formulario__input {
+   margin-top: -3px; /* Reduce el margen superior del input */
+   margin-bottom: 5px !important; /* Reduzca el margen inferior del input */
+}
+
+.icono-x-circle {
+   position: absolute;
+   top: 5px;
+   right: 5px;
+   cursor: pointer;
+   color: red; /* Color del icono */
+   font-size: 18px; /* Tamaño del icono */
 }
