--- a/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
+++ b/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
@@ -17,7 +17,8 @@
 }
 
 .row d-flex {
-   margin: 0; /* Elimina el margen del contenedor */
+   margin: 0;
+   /* Elimina el margen del contenedor */
 }
 
 .formulario {
@@ -42,7 +43,7 @@
    position: relative;
 }
 
-/* .formulario__input {
+ .formulario__input {
    width: 100%;
    background: #fff;
    /* border: 3px solid transparent; /
@@ -51,8 +52,8 @@
    line-height: 45px;
    padding: 0 40px 0 10px;
    transition: .3s ease all;
-   /* border-radius: var(--bs-border-radius); /
-   /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; /
+   /* border-radius: var(--bs-border-radius); */
+   /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
    display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
@@ -68,7 +69,7 @@
    border: var(--bs-border-width) solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-} */
+} 
 
 .formulario__input:focus {
    border: 3px solid #0075FF;
@@ -299,21 +300,33 @@
 .formulario__input {
    width: calc(100% - 12px);
    padding: 8px;
-   /* margin-top: 5px; */
+   margin-top: -3px;/*Con esto se mueve el imput*/ 
    border: 1px solid #ced4da;
    border-radius: 4px;
+}
+
+.form_group {
+   margin-top: 50px;
 }
 
 .columnas {
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between; /* Espacio entre columnas */
-   margin-bottom: 5px; /* Espacio entre filas */
+   justify-content: space-between;
+   /* Espacio entre columnas */
+   margin-bottom: -10px;
+   /*Espacio entre filas */
+   margin-right: -15px;
+   /* Compensar el margen derecho */
+   margin-left: -15px;
+   /* Compensar el margen izquierdo */
 }
 
 .columna {
-   width: calc(50% - 10px); /* Ancho del 50% para cada columna con margen */
-   margin-bottom: 5px; /* Espacio entre elementos */
+   width: calc(50% - 10px);
+   /* Ancho del 50% para cada columna con margen */
+   margin-bottom: -20px;
+   /* Espacio entre elementos */
 }
 
 .col-tarjeta-paciente {
@@ -328,8 +341,10 @@
 }
 
 .formulario__input {
-   margin-top: -3px; /* Reduce el margen superior del input */
-   margin-bottom: 5px !important; /* Reduzca el margen inferior del input */
+   margin-top: 5px;
+   /* Reduce el margen superior del input */
+   margin-bottom: 5px !important;
+   /* Reduzca el margen inferior del input */
 }
 
 .icono-x-circle {
@@ -337,6 +352,8 @@
    top: 5px;
    right: 5px;
    cursor: pointer;
-   color: red; /* Color del icono */
-   font-size: 18px; /* Tamaño del icono */
+   color: red;
+   /* Color del icono */
+   font-size: 18px;
+   /* Tamaño del icono */
 }
