--- a/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
+++ b/PHP/Negocio/Expediente/V_Expediente/V_expediente_terapeutico.css
@@ -42,17 +42,17 @@
    position: relative;
 }
 
-/* .formulario__input {
+.formulario__input {
    width: 100%;
    background: #fff;
-   /* border: 3px solid transparent; /
+   border: 3px solid transparent;
    border-radius: 3px;
    height: 45px;
    line-height: 45px;
    padding: 0 40px 0 10px;
    transition: .3s ease all;
-   /* border-radius: var(--bs-border-radius); /
-   /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; /
+   border-radius: var(--bs-border-radius); 
+   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; 
    display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
@@ -68,7 +68,7 @@
    border: var(--bs-border-width) solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-} */
+} 
 
 .formulario__input:focus {
    border: 3px solid #0075FF;
