--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@
 .btn {
     font-size: 15px; /* O cualquier valor deseado */
     width: 45px;
-    background-color: #a1ecdf;
+    background-color: #00b7ff;
     border: none;
     width: 70px;
 }
