--- a/PHP/CSSReportes/botones.css
+++ b/PHP/CSSReportes/botones.css
@@ -144,22 +144,21 @@ padding: 8px 12px;
 		padding: 7px 5px;
 }
 
-#editarrol-btn {
-  background-color: rgb(92, 120, 243); /* Color de fondo */
+#editarrol-btn{
+  background-color: #00b7ff;; /* Color de fondo */
   color: #212529; /* Color del texto */
-  border: 1px solid #d8d8d8; /* Borde */
-      box-shadow: 0 0 20px rgba(192, 203, 251, 0.7);
-      color: #130d0d;
-      cursor: pointer;
-      font-size: 20px;
-  justify-content: center;
-    align-items: center;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  float: left;	
-      margin-right: 2cqb;	
-      width: 40px;
+  /* border: 1px solid #001df5; Borde */
+  border-radius: 4px; /* Bordes redondeados */
+  padding: 8px 15px;
+  width: 180px;
+  font-size: 14px;
+  cursor: pointer; /* Cambia el cursor a mano al pasar el ratón por encima */
+  transition: background-color 0.3s, color 0.3s; /* Transición suave */
+}
+
+#editarrol-btn:hover {
+  background-color: #e0a800; /* Color de fondo al pasar el ratón por encima */
+  color: #170303; /* Color del texto al pasar el ratón por encima */
 }
 
 #permisosbtn {
